# AlphaApple

./: .gitignore  CHROME_EXTENSION_GUIDE.md  README.md  main.py  pyproject.toml  test_model.py
chrome_extension/: ICON_GUIDE.txt  content_script.js  manifest.json  popup.html  popup.js  styles.css
envs/: fruitbox_env.py
eval_logs/: evaluations.npz
exports/: README.md  fruitbox_ppo.onnx  model_info.json
runs/fruitbox/PPO_1/: events.out.tfevents.1756044484.gangbyeongsuui-MacBookPro.local.77969.0
runs/fruitbox/PPO_10/: events.out.tfevents.1756045452.gangbyeongsuui-MacBookPro.local.87794.0
runs/fruitbox/PPO_2/: events.out.tfevents.1756044764.gangbyeongsuui-MacBookPro.local.79908.0
runs/fruitbox/PPO_3/: events.out.tfevents.1756044785.gangbyeongsuui-MacBookPro.local.80104.0
runs/fruitbox/PPO_4/: events.out.tfevents.1756044966.gangbyeongsuui-MacBookPro.local.82219.0
runs/fruitbox/PPO_5/: events.out.tfevents.1756045078.gangbyeongsuui-MacBookPro.local.83541.0
runs/fruitbox/PPO_6/: events.out.tfevents.1756045126.gangbyeongsuui-MacBookPro.local.84101.0
runs/fruitbox/PPO_7/: events.out.tfevents.1756045197.gangbyeongsuui-MacBookPro.local.84870.0
runs/fruitbox/PPO_8/: events.out.tfevents.1756045271.gangbyeongsuui-MacBookPro.local.85667.0
scripts/: use_model.py
src/: baseline_eval.py  compare_agent.py  convert_to_onnx.py  evaluate_ppo.py  full_comparison.py  greedy_agent.py  random_agent.py  test_onnx.py  upload_to_hf.py
train/: train_maskable_ppo.py
web/: fruitbox_ai.js  test_game.html
(+1 files in other folders)
