[project]
name = "alphaapple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.0",
    "numpy>=2.3.2",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
